<resources>
    <string name="app_name">Piece Of Cake</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="filter">filter</string>
    <string name="action_settings">Settings</string>
    <string name="pieceofcake">pieceofcake</string>
    <string name="Next">הבא</string>
    <string name="City">עיר</string>
    <string name="Baker">אופה</string>
    <string name="Pastry">מאפה</string>
    <string name="Entry">שלום משתמש יקר</string>
    <string name="Customer">לקוח</string>
    <string name="Password">סיסמא</string>
    <string name="NewUser">משתמש חדש</string>
    <string name="reg">לחץ על הרשמה</string>
    <string name="registration">הרשמה</string>
    <string name="Confirm">אישור</string>
    <string name="ExsitCustomer">משתמש רשום</string>
    <string name="Email">E-mail</string>
    <string name="fullName">שם מלא</string>
    <string name="passwordApprove">אישור סיסמא</string>
    <string name="phoneNumber">טלפון</string>
    <string name="ifBaker">אופה</string>
    <string name="ifCustomer">לקוח</string>
    <string name="Reg">הרשמה</string>
    <string name="addItem">הוספת מאפה</string>
    <string name="pastryName">שם </string>
    <string name="price">מחיר </string>
    <string name="description">תיאור</string>
    <string name="alerganic">מרכיבים אלרגניים</string>
    <string name="LogOutC">התנתקות</string>
    <string name="myOrders">ההזמנות שלי</string>
    <string name="myMenu">התפריט שלי</string>
    <string name="settings">הגדרות</string>
    <string name="newOrder">הזמנה חדשה</string>
    <string name="favorites">המועדפים שלי</string>
    <string name="numOfOrder">מספר הזמנה</string>
    <string name="C_email">מייל הלקוח</string>
    <string name="C_city">עיר</string>
    <string name="date">תאריך</string>
    <string name="pastry_name">שם המאפה</string>
    <string name="pastry_id">מזהה המאפה</string>
    <string name="pay">תשלום</string>
    <string name="cityName">עיר</string>
    <string name="houseNumber">מספר בית</string>
    <string name="appartmentNumber">מספר דירה</string>
    <string name="floor">קומה</string>
    <string name="streetName">רחוב</string>
    <string name="Buy">קנה!</string>
    <string name="command">הערות</string>
    <string name="cach">מזומן</string>
    <string name="OrderDetails">פרטי ההזמנה</string>
    <string name="orderDetails">פרטי ההזמנה</string>
    <string name="Date">תאריך</string>
    <string name="Pay">אמצעי תשלום</string>
    <string name="cash">מזומן</string>
    <string name="creditCard">אשראי</string>
    <string name="recieveOrder">קבלת ההזמנה</string>
    <string name="delivery">משלוח</string>
    <string name="selfDelivery">איסוף עצמי</string>
    <string name="comment">הערות</string>
    <string name="buy">קנה</string>
    <string name="numOfOrderC">מספר הזמנה</string>
    <string name="baker_email">מייל האופה</string>
    <string name="city_C">עיר</string>
    <string name="date_C">תאריך</string>
    <string name="pastry_name_C">שם המאפה</string>
    <string name="pastry_id_C">מזהה המאפה</string>
    <string name="pay_C">תשלום</string>
    <string name="myOrdersCustomer">ההזמנות שלי</string>
    <string name="NumOfOrder">מספר הזמנה</string>
    <string name="dateOrder">תאריך</string>
    <string name="pastryID">מזהה המאפה</string>
    <string name="namePastry">שם המאפה</string>
    <string name="bakerID">מזהה האופה</string>
    <string name="bakerEmail">מייל האופה</string>
    <string name="bakerAppartment">דירה</string>
    <string name="bakerFloor">קומה</string>
    <string name="bakerNumHouse">מספר בית</string>
    <string name="bakerStreet">רחוב</string>
    <string name="bakerCity">עיר</string>
    <string name="customerID">מזהה הלקוח</string>
    <string name="customerEmail">מייל הלקוח</string>
    <string name="customerAppartment">דירה</string>
    <string name="customerFloor">קומה</string>
    <string name="customerNumHouse">מספר בית</string>
    <string name="customerStreet">רחוב</string>
    <string name="customerCity">עיר</string>
    <string name="Comment">הערות</string>
    <string name="PayOrder">תשלום</string>
    <string name="recievedOrder">קבלת ההזמנה</string>
    <string name="bakerName">שם האופה</string>
    <string name="customerName">שם הלקוח</string>
    <string name="bakerPhone">טלפון האופה</string>
    <string name="customerPhone">טלפון הלקוח</string>
    <string name="myOrdersBaker">ההזמנות שלי</string>
    <string name="addPicture">אישור והוספת תמונות</string>
    <string name="chooseFile">בחר קובץ</string>
    <string name="Upload">העלאה</string>
    <string name="doneUploading">סיימתי</string>
    <string name="edit">עריכה</string>
    <string name="pictures">תמונות</string>
    <string name="deletePastry">מחיקת מאפה</string>
    <string name="deletePhoto">לחץ על תמונה למחיקתה</string>
    <string name="todo">TODO</string>
    <string name="addPictures">הוספת תמונות</string>
    <string name="order">הזמן</string>
    <string name="noRes">לא נמצאו תוצאות</string>
    <string name="searchbyBaker">חפש אופה לפי עיר/שם/רחוב</string>
    <string name="SearchbyPastry">חפש מאפה</string>
    <string name="bakerDETS">פרטי האופה</string>
    <string name="PASTRYDETS">צפייה במאפה</string>
    <string name="PastryPictures">תמונות</string>
    <string name="newORDER">הזמנה חדשה</string>
    <string name="myLastOrders">ההזמנות האחרונות שלי - לחץ כדי להזמין שנית</string>
    <string name="serchBAKER">חפש אופה</string>
    <string name="serachPASTRY">חפש מאפה</string>
    <string name="addTofavorites">הוספת אופה למועדפים</string>
    <string name="bakerdits">אופה:</string>
    <string name="move_to_menu">עבור לתפריט</string>
    <string name="delete_from_favorites">מחק מהמועדפים</string>


</resources>
