<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bacground"
    android:orientation="vertical"
    tools:context=".customerSide.BuyPastryActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <TextView
        android:id="@+id/orderDetails"
        android:layout_width="223dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/orderDetails"
        android:textColor="#090808"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="20dp"
        android:text="@string/Date"
        android:textColor="#0C0C0C"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputDate"
        android:layout_width="231dp"
        android:layout_height="30dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="96dp"
        android:background="#FCF9F9"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Pay"
        android:textColor="#0C0C0C"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/creditCard"
        android:layout_width="86dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="148dp"
        android:background="#FCF9F9"
        android:text="@string/creditCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cash"
        android:layout_width="91dp"
        android:layout_height="31dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="148dp"
        android:background="#FCF9F9"
        android:text="@string/cash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recieveOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="12dp"
        android:text="@string/recieveOrder"
        android:textColor="#0C0C0C"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/delivery"
        android:layout_width="87dp"
        android:layout_height="33dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="184dp"
        android:background="#FCF9F9"
        android:text="@string/delivery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/selfDelivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="192dp"
        android:background="#FCF9F9"
        android:text="@string/selfDelivery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/comment"
        android:layout_width="90dp"
        android:layout_height="29dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="24dp"
        android:text="@string/comment"
        android:textColor="#0C0C0C"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="187dp"
        android:layout_height="21dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="248dp"
        android:background="#FCF9F9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="52dp"
        android:text="@string/buy"
        android:textColor="#0C0C0C"
        android:textSize="24sp"
        android:background="#FCF9F9"
        android:onClick="CreateNewOrderC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
