<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bacground"
    tools:context=".customerSideActivities.FavoriteBakerActivity">

    <TextView
        android:id="@+id/baker_name"
        android:layout_width="145dp"
        android:layout_height="52dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="132dp"
        android:text="@string/bakerdits"
        android:textColor="#000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deleteFromFavorites"
        android:layout_width="165dp"
        android:layout_height="58dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="28dp"
        android:background="#FFFF"
        android:text="@string/delete_from_favorites"
        android:onClick="deleteFromFavorites"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baker_name" />

    <Button
        android:id="@+id/moveToMenuButton"
        android:layout_width="122dp"
        android:layout_height="58dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="104dp"
        android:background="#FFFF"
        android:onClick="moveToMenu"
        android:text="@string/move_to_menu"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baker_name" />
</androidx.constraintlayout.widget.ConstraintLayout>